Fixed header IMG scaling on mobile

--- a/style.css
+++ b/style.css
@@ -250,8 +250,22 @@ h4 {
 		width: 100%;
 		margin-left: 0;
 	}
+	header {
+		width:100%;
+	}
+	#header img{
+		width:200%;
+		height: auto;
+		min-height: auto;
+		max-height: auto;
+	}
 }
-
+@media screen and (max-width: 580px) {
+	#header img {
+		width:auto;
+		height: 295px;
+	}
+}
 
 #pics {
 	background-color: #fff;
